--- a/GD2_AngularJS/B7_B8_SPA/src/layout/header.html
+++ b/GD2_AngularJS/B7_B8_SPA/src/layout/header.html
@@ -1,6 +1,6 @@
 <!-- Header -->
-<header>
-  <li><a href="">Trang chu</a></li>
-  <li><a href="">Ve chung toi </a></li>
-  <li><a href="">Lien he</a></li>
+<header class="customClass">
+  <li><a href="#trang-chu">Trang chu</a></li>
+  <li><a href="#contact">Lien he</a></li>
+  <li><a href="#cua-hang">Cua hang</a></li>
 </header>
